Correct display of home card on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,7 @@ CSS Homes Section
 .home-card-link {
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 .home-card .card-image {
@@ -267,6 +268,7 @@ CSS Homes Section
 }
 
 .home-info-container {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
